<resources>
    <string name="app_name">It\'s OK</string>

    <!--  Fragments:  -->

    <string name="fragment_chat_error_invalid_gripe">Invalid gripe has been provided!</string>

    <string name="fragment_general_settings_top_bar_title">Settings</string>
    <string name="fragment_general_settings_setting_positive_mementoes_title">Positive mementoes</string>

    <string name="fragment_positive_mementoes_settings_top_bar_title">Positive mementoes</string>
    
    <string name="fragment_memento_editor_dialog_error_invalid_memento">Invalid memento has been provided!</string>

    <!--  Components:  -->

    <string name="component_error_dialog_title_text">Error</string>
    <string name="component_error_dialog_button_neutral_caption" translatable="false">OK</string>
    <string name="component_chat_top_bar_action_settings_title_text">Settings</string>
    <string name="component_chat_gripe_input_hint_text">Speaking from my heart..</string>
    <string name="component_chat_memento_buttons_button_positive_caption">You\'re right!</string>
    <string name="component_chat_memento_buttons_button_negative_caption">Not enough</string>
    <string name="component_chat_bye_buttons_button_bye_caption">Bye!</string>
    <string name="component_chat_bye_buttons_button_restart_caption">Restart</string>
    <string name="fragment_general_settings_main_section_title_text">Main</string>
    <string name="fragment_positive_mementoes_header_title_text">Your inspiration</string>
    <string name="fragment_positive_mementoes_header_description_text">Feel free to swipe aside unnecessary stuff or click item to edit it</string>
    <string name="component_memento_editor_text_input_wrapper_helper_text">You\'re welcome to write down a positive message for yourself</string>
    <string name="component_memento_editor_image_title_text">Image</string>
    <string name="component_memento_editor_text_input_wrapper_hint_text">Memento text</string>
    <string name="component_memento_editor_image_description_text">You can upload an image that is associated with positive experience</string>
    <string name="component_memento_editor_title_editor_mode">Edit memento</string>
    <string name="component_memento_editor_title_creator_mode">Create memento</string>
    <string name="component_memento_editor_button_save_caption">Save</string>
    <string name="component_memento_editor_button_cancel_caption">Cancel</string>

</resources>