<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/fragment_general_settings_top_bar_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/fragment_general_settings_top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_go_back"
            app:title="@string/fragment_general_settings_top_bar_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/fragment_general_settings_main_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragment_general_settings_top_bar_wrapper"
        android:padding="@dimen/medium_gap_between_components"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fragment_general_settings_main_section_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadlineSmall"
            android:text="@string/fragment_general_settings_main_section_title_text"/>

        <com.qubacy.itsok.ui.application.activity._common.screen.settings.general.component.setting.SettingView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_gap_between_components"
            app:settingIcon="@drawable/ic_message"
            app:settingTitle="@string/fragment_general_settings_setting_positive_mementoes_title"
            app:settingButtonIcon="@drawable/ic_dots"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>