<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.qubacy.itsok.ui.application.activity._common.screen.settings._common.component.topbar.SettingsTopBarView
        android:id="@+id/fragment_positive_mementoes_top_bar_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:settingsTopBarTitle="@string/fragment_positive_mementoes_settings_top_bar_title"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_positive_mementoes_header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragment_positive_mementoes_top_bar_wrapper"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/medium_gap_between_components"
        android:layout_marginStart="@dimen/medium_gap_between_components"
        android:textAppearance="?attr/textAppearanceHeadlineSmall"
        android:text="@string/fragment_positive_mementoes_header_title_text"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_positive_mementoes_header_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragment_positive_mementoes_header_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/medium_gap_between_components"
        android:layout_marginEnd="@dimen/medium_gap_between_components"
        android:layout_marginTop="@dimen/default_gap_between_components"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:text="@string/fragment_positive_mementoes_header_description_text"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_positive_mementoes_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/fragment_positive_mementoes_header_description"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/default_gap_between_components"
        android:padding="@dimen/default_gap_between_components"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:overScrollMode="never"
        tools:itemCount="3"
        tools:listitem="@layout/component_positive_memento_preview"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fragment_positive_mementoes_button_compose_memento"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/medium_gap_between_components"
        android:layout_marginBottom="@dimen/medium_gap_between_components"
        android:src="@drawable/ic_pencil"/>

</androidx.constraintlayout.widget.ConstraintLayout>